--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/background/far.png
+    # - assets/images/background/mid.png
+    # - assets/images/background/near.png
+    - assets/images/player_ship.png
+    - assets/images/collectible.png
+    - assets/images/bullet.png
+
